--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,6 +9,7 @@
     <div class="center">
       <h1>Amazing Chat Application</h1>
       <h3 id="chat-header">Currently Chat: general</h3>
+      <h3 id="connection-header">Connected to Websocket: false</h3>
 
       <form id="chatroom-selection">
         <label for="chatroom">Chatroom:</label>
@@ -35,6 +36,16 @@
         <input type="text" id="message" name="message" /><br /><br />
         <input type="submit" value="Send Message" />
       </form>
+
+      <div style="border: 3px solid balck; margin-top: 30px">
+        <form id="login-form">
+          <label for="username">Username:</label>
+          <input type="text" id="username" name="username" /><br />
+          <label for="password">Password:</label>
+          <input type="password" id="password" name="password" /><br /><br />
+          <input type="submit" value="Login" />
+        </form>
+      </div>
     </div>
   </body>
 
@@ -85,14 +96,51 @@
       return false;
     }
 
-    window.onload = function () {
-      document.getElementById('chatroom-selection').onsubmit = changeChatroom;
-      document.getElementById('chatroom-message').onsubmit = sendMessage;
+    function login() {
+      let formData = {
+        username: document.getElementById('username').value,
+        password: document.getElementById('password').value,
+      };
 
+      fetch('login', {
+        method: 'post',
+        body: JSON.stringify(formData),
+        mode: 'cors',
+      })
+        .then((response) => {
+          if (response.ok) {
+            return response.json();
+          } else {
+            throw 'unauthorized';
+          }
+        })
+        .then((data) => {
+          connectWebsocket(data.otp);
+        })
+        .catch((error) => {
+          alert(error);
+        });
+      return false;
+    }
+
+    function connectWebsocket(otp) {
       if (window['WebSocket']) {
         console.log('support websocket');
         // connect to ws
-        conn = new WebSocket('ws://' + document.location.host + '/ws');
+        conn = new WebSocket(
+          'ws://' + document.location.host + '/ws?otp=' + otp
+        );
+
+        conn.onopen = function (evt) {
+          document.getElementById('connection-header').innerHTML =
+            'Connected to Websocket: true';
+        };
+
+        conn.onclose = function (evt) {
+          document.getElementById('connection-header').innerHTML =
+            'Connected to Websocket: false';
+          // TODO: reconnect
+        };
 
         conn.onmessage = function (evt) {
           const eventData = JSON.parse(evt.data);
@@ -103,6 +151,12 @@
       } else {
         alert('Your browser does not support WebSocket.');
       }
+    }
+
+    window.onload = function () {
+      document.getElementById('chatroom-selection').onsubmit = changeChatroom;
+      document.getElementById('chatroom-message').onsubmit = sendMessage;
+      document.getElementById('login-form').onsubmit = login;
     };
   </script>
 
