--- a/frontend/index.html
+++ b/frontend/index.html
@@ -128,7 +128,7 @@
         console.log('support websocket');
         // connect to ws
         conn = new WebSocket(
-          'ws://' + document.location.host + '/ws?otp=' + otp
+          'wss://' + document.location.host + '/ws?otp=' + otp
         );
 
         conn.onopen = function (evt) {
